--- a/Wardriver/res/layout/activity_main.xml
+++ b/Wardriver/res/layout/activity_main.xml
@@ -8,11 +8,17 @@
     tools:context="com.inf8405.wardriver.Main" >
 
     <!-- Main -->
-    <FrameLayout
+    <!-- FrameLayout
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#95c861" />
+        android:background="#95c861" /-->
+        
+	<fragment xmlns:android="http://schemas.android.com/apk/res/android"
+	     android:id="@+id/map"
+	     android:layout_width="match_parent"
+	     android:layout_height="match_parent"
+	     android:name="com.google.android.gms.maps.MapFragment"/>
 
     <!-- Navigation -->
     <ListView
