--- a/Wardriver/res/layout/activity_main.xml
+++ b/Wardriver/res/layout/activity_main.xml
@@ -1,5 +1,4 @@
-<!-- A DrawerLayout is intended to be used as the top-level content view using match_parent for both width and height to consume the full space available. -->
-<android.support.v4.widget.DrawerLayout
+<!-- A DrawerLayout is intended to be used as the top-level content view using match_parent for both width and height to consume the full space available. --><android.support.v4.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer_layout"
@@ -7,20 +6,14 @@
     android:layout_height="match_parent"
     tools:context="com.inf8405.wardriver.Main" >
 
-    <!-- Main -->
-    <!-- FrameLayout
-        android:id="@+id/container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#95c861" /-->
-        
-	<fragment xmlns:android="http://schemas.android.com/apk/res/android"
+    <!-- Main (map) -->
+	<fragment
 	     android:id="@+id/map"
 	     android:layout_width="match_parent"
 	     android:layout_height="match_parent"
 	     android:name="com.google.android.gms.maps.MapFragment"/>
 
-    <!-- Navigation -->
+    <!-- Navigation (drawer) -->
     <ListView
         android:id="@+id/left_drawer"
         android:layout_width="@dimen/navigation_drawer_width"
