Boussole fonctionne pas trop pire. Plus beau code pour wifi.

--- a/Wardriver/res/layout/activity_main.xml
+++ b/Wardriver/res/layout/activity_main.xml
@@ -19,8 +19,8 @@
         android:layout_width="@dimen/navigation_drawer_width"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:divider="#aaa"
-    	android:background="#dddd"
+        android:divider="#aaaa"
+    	android:background="#afff"
     	android:dividerHeight="1dp" />
 
 </android.support.v4.widget.DrawerLayout>
