--- a/Wardriver/res/layout/activity_main.xml
+++ b/Wardriver/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.inf8405.wardriver.Main" >
+    tools:context="com.inf8405.wardriver.MainActivity" >
 
     <!-- Main (map) -->
 	<fragment
