--- a/Wardriver/res/layout/activity_main.xml
+++ b/Wardriver/res/layout/activity_main.xml
@@ -1,4 +1,4 @@
-<!-- A DrawerLayout is intended to be used as the top-level content view using match_parent for both width and height to consume the full space available. --><android.support.v4.widget.DrawerLayout
+<android.support.v4.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer_layout"
@@ -13,6 +13,21 @@
 	     android:layout_height="match_parent"
 	     android:name="com.google.android.gms.maps.MapFragment"/>
 
+	<RelativeLayout
+	    android:id="@+id/overlay_layout"
+        android:layout_width="match_parent"
+    	android:layout_height="match_parent" >
+
+		<Button
+		    android:id="@+id/btnCompass"
+		    android:layout_width="50dp"
+		    android:layout_height="50dp"
+		    android:layout_alignParentBottom="true"
+		    android:layout_centerHorizontal="true"
+		    android:layout_marginBottom="15dp"
+		    android:background="@drawable/compass_off" />
+    </RelativeLayout>
+	
     <!-- Navigation (drawer) -->
     <ListView
         android:id="@+id/left_drawer"
