--- a/Wardriver/res/values/array.xml
+++ b/Wardriver/res/values/array.xml
@@ -6,6 +6,7 @@
         <item>@string/menu_options</item>
         <item>@string/menu_testWifi</item>
         <item>@string/menu_testPins</item>
+        <item>@string/menu_testPush</item>
     </string-array>
     
     <string-array name="compass_offset">
