--- a/Wardriver/res/values/array.xml
+++ b/Wardriver/res/values/array.xml
@@ -7,6 +7,7 @@
         <item>@string/menu_testWifi</item>
         <item>@string/menu_testPins</item>
         <item>@string/menu_testPush</item>
+        <item>@string/info_gps</item>
     </string-array>
     
     <string-array name="compass_offset">
