--- a/Wardriver/res/layout/activity_main.xml
+++ b/Wardriver/res/layout/activity_main.xml
@@ -18,6 +18,16 @@
         android:layout_width="match_parent"
     	android:layout_height="match_parent" >
 
+   		<Button
+		    android:id="@+id/btnFilter"
+		    android:layout_width="50dp"
+		    android:layout_height="50dp"
+		    android:layout_alignParentBottom="true"
+		    android:layout_alignParentLeft="true"
+		    android:layout_marginBottom="15dp"
+		    android:layout_marginLeft="15dp"
+		    android:background="@drawable/filter_off" />
+	    
 		<Button
 		    android:id="@+id/btnCompass"
 		    android:layout_width="50dp"
