--- a/Wardriver/res/values/array.xml
+++ b/Wardriver/res/values/array.xml
@@ -5,7 +5,8 @@
         <item>@string/menu_record_start</item>
         <item>@string/menu_options</item>
         <item>@string/menu_testPush</item>
-        <item>@string/info_gps</item>
+        <item>@string/menu_info_gps</item>
+        <item>@string/menu_clear_map</item>
     </string-array>
     
     <string-array name="compass_offset">
